# faster-apriori-rs

./: .gitignore  Cargo.toml  README.md
benchmarks/: benchmark.py
src/: lib.rs
