[package]
name = "apriori"
version = "0.1.0"
edition = "2018"

[lib]
name = "apriori"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
itertools = "0.10.1"
rayon = "1.5.1"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
